fix button spacing

--- a/src/plonetheme/tokyo/theme/scss/_forms.scss
+++ b/src/plonetheme/tokyo/theme/scss/_forms.scss
@@ -14,6 +14,7 @@ label.required:after {
     .btn {
         font-size: 14px;
         margin-right: 0.5em;
+        padding: 8px 10px 4px 10px;
     }
     
     #btn-selected-items {
